# CrewAI-to-buy-a-phone

./: README.md  data.py  main.py  pyproject.toml
